
  ZOOKEEPER-1603. StaticHostProviderTest testUpdateClientMigrateOrNot hangs (fpj)


  ZOOKEEPER-1770. NullPointerException in SnapshotFormatter
  (Germán Blanco via phunt)

  ZOOKEEPER-1774. QuorumPeerMainTest fails consistently with
  "complains about host" assertion failure (phunt)

  ZOOKEEPER-1624. PrepRequestProcessor abort multi-operation incorrectly. (thawan via camille)

IMPROVEMENTS:

  ZOOKEEPER-1610. Some classes are using == or != to compare
  Long/String objects instead of .equals() (Edward Ribeiro via phunt)

  ZOOKEEPER-1564. Allow JUnit test build with IBM Java
    (Paulo Ricardo Paz Vital via phunt)

  ZOOKEEPER-1799. SaslAuthFailDesignatedClientTest.testAuth fails
  frequently on SUSE (Jeffrey Zhong via phunt)

  ZOOKEEPER-1557. jenkins jdk7 test failure in
  testBadSaslAuthNotifiesWatch (Eugene Koontz via phunt)

  ZOOKEEPER-1459. Standalone ZooKeeperServer is not closing
  the transaction log files on shutdown (Rakesh R via fpj)

  ZOOKEEPER-1834. Catch IOException in FileTxnLog (fpj via michim)

  ZOOKEEPER-1837. Fix JMXEnv checks (potential race conditions)
  (Germán Blanco via fpj)

  ZOOKEEPER-1849. Need to properly tear down tests in various
  cases (Germán via fpj)

  ZOOKEEPER-1852. ServerCnxnFactory instance is not properly
  cleanedup (Rakesh R via fpj)

  ZOOKEEPER-1414. QuorumPeerMainTest.testQuorum, testBadPackets are failing
  intermittently (Rakesh R via michim)

  ZOOKEEPER-1057. zookeeper c-client, connection to offline server fails to
  successfully fallback to second zk host (Germán Blanco via michim)

  ZOOKEEPER-1857. PrepRequestProcessotTest doesn't shutdown ZooKeeper server
  (Germán Blanco via michim)

  ZOOKEEPER-1238. when the linger time was changed for NIO the patch missed
  Netty (Skye Wanderman-Milne via fpj)

  ZOOKEEPER-1632. fix memory leaks in cli_st (fpj via michim)

  ZOOKEEPER-1837. Fix JMXEnv checks (potential race conditions)
  (Germán Blanco via fpj)
